Fixed spacing between post title, post date and post content.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,10 +24,6 @@ a:link, a:active, a:visited {
 
 a:hover { color: #007ba1; }
 
-h5 {
-  margin: 0;
-}
-
 .greeting-small {
   margin-bottom: 30px;
   line-height: 1.3em;
