--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -1,9 +1,14 @@
-p img {
-  max-width: 100%;
-  display: block;
-  margin: 0 auto;
+.post-title {
+  margin-bottom: 0;
 }
 
 .post-date {
   color: #333;
+  margin-bottom: 12px;
+}
+
+p img {
+  max-width: 100%;
+  display: block;
+  margin: 0 auto;
 }
